changes: added uuid as item id